...
	return (
		<View style={styles.container}>
			<StatusBar style="light" />
			<SafeAreaView style={styles.main}>
				<Text
					style={{ fontSize: 20, fontWeight: "bold", color: "white" }}
					testID="homeText"
				>
					{`Hello there,\nYou have spent ${formatMoney(
						Math.abs(expenseAmount)
					)} out of ${formatMoney(
						Math.abs(incomeAmount)
					)} this month.\nHave a nice day!`}
...
					</Text>
				) : null}
			</SafeAreaView>
			<FloatingButton
				icon="chevron-forward"
				onPress={() => navigation.navigate("Transactions")}
				testID="homeButton"
			/>
		</View>
	);
}

const styles = StyleSheet.create({
...
