...
						style={{
							fontSize: 24,
							fontWeight: "400",
							color: "white",
							margin: 4,
						}}
						testID="overviewNoTransactionsText"
					>
						No transactions found
					</Text>
				)}
			</View>
		);
...
